--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 
     <button>
-        <span onclick="randomBosses()">GENERATE BOSS AGAIN
+        <span onclick="randomBosses()">Choose wisely, ashen one
         </span>
     </button>
 
